--- a/public/about.html
+++ b/public/about.html
@@ -8,5 +8,6 @@
         <h1>
             ABOUT PAGE :
         </h1>
+        <p>This site is Created by Yash Thaman to recieve  weather forcast for any region. THANKS!!</p>
     </body>
 </html>
